# tree-sitter-ghostty

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-ghostty.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ghostty/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
ftdetect/: ghostty.vim
ftplugin/: ghostty.lua
lua/tree-sitter-ghostty/: health.lua  init.lua
plugin/: tree-sitter-ghostty.lua
queries/: highlights.scm
queries/ghostty/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: README.md  config
test/corpus/: basic-directives.txt  command-directives.txt  comments.txt  config-file-directives.txt  donated.txt  env-directives.txt  github.txt  key-remap-directives.txt  keybind-directives.txt  palette-directives.txt  path-directives.txt  theme-directives.txt
tests/: README.md
tests/nvim/: filetype_spec.lua  ftplugin_spec.lua  health_spec.lua  minimal_init.lua  parser_registration_spec.lua
